--- a/sourcecode/OCDC/00_ocdc_prepare_datasets.ipynb
+++ b/sourcecode/OCDC/00_ocdc_prepare_datasets.ipynb
@@ -9,31 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-02 09:08:42,813 :: INFO <module> :: testing images\n",
-      "2021-02-02 09:08:42,817 :: INFO <module> :: Processing wsi 'TMA HE.svs'\n",
-      "2021-02-02 09:08:43,646 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: 'TMA HE.svs'\n",
-      "2021-02-02 09:08:48,900 :: INFO <module> :: training images\n",
-      "2021-02-02 09:08:48,902 :: INFO <module> :: Processing wsi '1009009.svs'\n",
-      "2021-02-02 09:09:04,002 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: '1009009.svs'\n",
-      "2021-02-02 09:09:04,557 :: INFO <module> :: Processing wsi '1009010x1000902.svs'\n",
-      "2021-02-02 09:09:17,272 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: '1009010x1000902.svs'\n",
-      "2021-02-02 09:09:19,345 :: INFO <module> :: Processing wsi '1009011.svs'\n",
-      "2021-02-02 09:09:37,403 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: '1009011.svs'\n",
-      "2021-02-02 09:09:38,550 :: INFO <module> :: Processing wsi '1009014.svs'\n",
-      "2021-02-02 09:09:48,874 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: '1009014.svs'\n",
-      "2021-02-02 09:09:50,070 :: INFO <module> :: Processing wsi '1009016x1000903.svs'\n",
-      "2021-02-02 09:10:05,493 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: '1009016x1000903.svs'\n",
-      "2021-02-02 09:10:07,010 :: INFO <module> :: Processing wsi '1009017.svs'\n",
-      "2021-02-02 09:10:14,086 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: '1009017.svs'\n",
-      "2021-02-02 09:10:15,149 :: INFO <module> :: Processing wsi '1009023.svs'\n",
-      "2021-02-02 09:10:21,807 :: INFO extract_normal_region_from_wsi :: \t Extracting normal regions from wsi image: '1009023.svs'\n"
+      "2023-08-21 17:25:43,908 :: INFO <module> :: testing images\n",
+      "2023-08-21 17:25:43,913 :: INFO <module> :: training images\n"
      ]
     }
    ],
@@ -113,20 +97,6 @@
     "                pil_img_normal_result.save('{}/{}_5.png'.format(dir_to_save, wsi_image_number))\n",
     "                "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -145,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
