--- a/sourcecode/ORCA/02_orca_train.ipynb
+++ b/sourcecode/ORCA/02_orca_train.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -20,18 +20,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-04-25 15:31:33,390 :: INFO load_dataset :: [training] ../../datasets/ORCA/training\n",
-      "2021-04-25 15:31:34,531 :: INFO load_dataset :: [training] ../../datasets/ORCA/training\n",
-      "2021-04-25 15:31:36,787 :: INFO load_dataset :: [testing] ../../datasets/ORCA/testing\n",
-      "2021-04-25 15:31:38,222 :: INFO create_dataloader :: Train images (640x640): 3344 augmentation: random\n",
-      "2021-04-25 15:31:38,223 :: INFO create_dataloader :: Valid images (640x640): 837 augmentation: no_augmentation\n",
-      "2021-04-25 15:31:38,225 :: INFO create_dataloader :: Test images (640x640): 4481 augmentation: no_augmentation\n",
-      "2021-04-25 15:31:38,226 :: INFO train_model_with_validation :: Runing on: cpu | GPU available? False\n",
-      "2021-04-25 15:31:38,948 :: INFO train_model_with_validation :: \n",
-      "2021-04-25 15:31:38,950 :: INFO train_model_with_validation :: --------------------\n",
-      "2021-04-25 15:31:38,952 :: INFO train_model_with_validation :: Epoch 1/100 (0m 0s) 2021-04-25 15:31:38.952707\n",
-      "2021-04-25 15:31:38,956 :: INFO train_model_with_validation :: --------------------\n",
-      "2021-04-25 15:31:39,309 :: INFO train_model_with_validation :: \tfname: 'TCGA-BA-4075-01Z-00-DX1.15BAC45A-F648-47AD-85C9-0CCC6504846E_1_r1c2.png' 1\n"
+      "2023-08-22 17:47:54,049 :: INFO load_dataset :: [training] ../../datasets/ORCA/training\n",
+      "2023-08-22 17:47:54,289 :: INFO load_dataset :: [training] ../../datasets/ORCA/training\n",
+      "2023-08-22 17:47:54,418 :: INFO load_dataset :: [testing] ../../datasets/ORCA/testing\n",
+      "2023-08-22 17:47:54,538 :: INFO create_dataloader :: Train images (640x640): 3987 augmentation: random\n",
+      "2023-08-22 17:47:54,539 :: INFO create_dataloader :: Test images (640x640): 4481 augmentation: no_augmentation\n",
+      "2023-08-22 17:47:54,540 :: INFO train_model_with_validation :: Runing on: cpu | GPU available? False\n",
+      "2023-08-22 17:47:55,081 :: INFO train_model_with_validation :: \n",
+      "2023-08-22 17:47:55,083 :: INFO train_model_with_validation :: --------------------\n",
+      "2023-08-22 17:47:55,086 :: INFO train_model_with_validation :: Epoch 1/3 random_9_operations (0m 0s) 2023-08-22 17:47:55.086127\n",
+      "2023-08-22 17:47:55,088 :: INFO train_model_with_validation :: --------------------\n",
+      "2023-08-22 17:47:55,277 :: INFO transform :: Epoch: '1' augmentation random None\n",
+      "2023-08-22 17:47:55,317 :: INFO train_model_with_validation :: \tfname: 'TCGA-4P-AA8J-01Z-00-DX1.5B44796F-D099-4076-9CAF-B40C2B83F432_0_r0c1.png' 1\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 45\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[39m# train the model\u001b[39;00m\n\u001b[1;32m     44\u001b[0m result_file_csv \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../../datasets/ORCA/training/orca_training_accuracy_loss.csv\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> 45\u001b[0m train_model_with_validation(dataloaders\u001b[39m=\u001b[39;49mdataloaders,\n\u001b[1;32m     46\u001b[0m                             model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m     47\u001b[0m                             n_epochs\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m,\n\u001b[1;32m     48\u001b[0m                             start_epoch\u001b[39m=\u001b[39;49mstart_epoch,\n\u001b[1;32m     49\u001b[0m                             augmentation_strategy\u001b[39m=\u001b[39;49maugmentation_strategy,\n\u001b[1;32m     50\u001b[0m                             output_dir\u001b[39m=\u001b[39;49mmodel_dir,\n\u001b[1;32m     51\u001b[0m                             augmentation_operations\u001b[39m=\u001b[39;49maugmentation,\n\u001b[1;32m     52\u001b[0m                             result_file_csv\u001b[39m=\u001b[39;49mresult_file_csv)\n",
+      "File \u001b[0;32m~/Documents/prog/tumor_regions_segmentation/sourcecode/ORCA/orca_train.py:103\u001b[0m, in \u001b[0;36mtrain_model_with_validation\u001b[0;34m(dataloaders, model, patch_size, n_epochs, start_epoch, batch_size, use_cuda, output_dir, augmentation_strategy, augmentation_operations, result_file_csv)\u001b[0m\n\u001b[1;32m     99\u001b[0m     optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m    101\u001b[0m torch\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mempty_cache()\n\u001b[0;32m--> 103\u001b[0m preds \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mzeros(output\u001b[39m.\u001b[39;49msize(), dtype\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49mdouble)\u001b[39m.\u001b[39;49mcuda()\n\u001b[1;32m    104\u001b[0m preds[output \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m1.0\u001b[39m\n\u001b[1;32m    106\u001b[0m \u001b[39m# statistics\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/prog/tumor_regions_segmentation/.venv/lib/python3.10/site-packages/torch/cuda/__init__.py:247\u001b[0m, in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    245\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mCUDA_MODULE_LOADING\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39menviron:\n\u001b[1;32m    246\u001b[0m     os\u001b[39m.\u001b[39menviron[\u001b[39m'\u001b[39m\u001b[39mCUDA_MODULE_LOADING\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mLAZY\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m--> 247\u001b[0m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_cuda_init()\n\u001b[1;32m    248\u001b[0m \u001b[39m# Some of the queued calls may reentrantly call _lazy_init();\u001b[39;00m\n\u001b[1;32m    249\u001b[0m \u001b[39m# we need to just return without initializing in that case.\u001b[39;00m\n\u001b[1;32m    250\u001b[0m \u001b[39m# However, we must not let any *other* threads in!\u001b[39;00m\n\u001b[1;32m    251\u001b[0m _tls\u001b[39m.\u001b[39mis_initializing \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx"
      ]
     }
    ],
@@ -82,20 +95,13 @@
     "result_file_csv = \"../../datasets/ORCA/training/orca_training_accuracy_loss.csv\"\n",
     "train_model_with_validation(dataloaders=dataloaders,\n",
     "                            model=model,\n",
-    "                            n_epochs=100,\n",
+    "                            n_epochs=3,\n",
     "                            start_epoch=start_epoch,\n",
     "                            augmentation_strategy=augmentation_strategy,\n",
     "                            output_dir=model_dir,\n",
     "                            augmentation_operations=augmentation,\n",
     "                            result_file_csv=result_file_csv)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2377,7 +2383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
